# traktexport

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: mypy.yaml  tests.yaml
scripts/: trakt-cli
traktexport/: __init__.py  __main__.py  dal.py  export.py  merge.py
